--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "prettier": "^3.3.3",
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
   },
@@ -8,6 +9,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "format": "prettier . --write",
     "preview": "vite preview"
   },
   "type": "module",
